--- a/src/config/config.json
+++ b/src/config/config.json
@@ -13,9 +13,9 @@
     "meta_image": "../../assets/images/6.png"
   },
   "contactInfo": {
-    "address": "Your Address",
-    "email": "your.email@example.com",
-    "phone": "+1 234 567 8900"
+    "address": "Unburdened You Blog",
+    "email": "blog@unburdenedyou.org",
+    "phone": "+12345678900"
   }
 }
 
